--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
